Get query artist name

--- a/app/src/main/res/layout/item_listofartist.xml
+++ b/app/src/main/res/layout/item_listofartist.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:layout_marginBottom="16dp">
+    android:paddingVertical="8dp">
 
     <ImageView
         android:layout_width="18dp"
@@ -64,10 +64,11 @@
 
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
             android:layout_gravity="center"
             android:rotation="180"
+            android:layout_marginEnd="8dp"
             android:src="@drawable/ic_round_arrow_go" />
 
     </LinearLayout>
