--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,26 +17,16 @@
         android:gravity="center_vertical"
         android:padding="4dp">
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginHorizontal="6dp"
-            android:layout_marginVertical="6dp"
-            android:src="@drawable/ic_round_search"/>
-
-        <EditText
-            android:id="@+id/search_edit_frame"
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/search_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="10dp"
-            android:background="@null"
+            android:layout_height="wrap_content"
             android:hint="@string/search"
             android:gravity="center_vertical"
             android:imeOptions="actionSearch"
             android:inputType="text"
             android:textSize="18sp"
-            android:textColor="@color/colorPrimaryText"
-            tools:ignore="InvalidId" />
+            android:textColor="@color/colorPrimaryText" />
 
     </LinearLayout>
 
